--- a/style.css
+++ b/style.css
@@ -8,24 +8,25 @@ body {
 .div-purple {
     background: hsl(276, 100%, 81%);
     background: linear-gradient(0deg, hsl(264, 100%, 61%) 03%, hsl(293, 100%, 63%) 100%);
-    height: 50rem;
-    width: 35rem;
+    height: 42rem;
+    width: 30rem;
     border-bottom-left-radius: 40rem;
     border-bottom-right-radius: 40rem;
     margin-left: -9rem;
 }
 
 .container-mobile {
-    height: 36rem;
-    width: 17rem;
+    height: 33rem;
+    width: 16rem;
     background-color: rgb(248, 248, 248);
     position: absolute;
-    top: 9rem;
-    left: 22rem;
+    top: 6rem;
+    left: 17rem;
 
     border-radius: 3rem;
-    border: 12px solid white;
+    border: 10px solid white;
 
+    box-shadow: 2px 20px 12px lightgray;
 }
 
 .notch {
@@ -47,8 +48,8 @@ body {
     height: 5rem;
     width: 100%;
 
-    border-top-right-radius: 2rem;
-    border-top-left-radius: 2rem;
+    border-top-right-radius: 2.5rem;
+    border-top-left-radius: 2.5rem;
 
     border-bottom-right-radius: .5rem;
     border-bottom-left-radius: .5rem;
