--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     padding: 0;
     background-color: hsl(0, 3%, 88%);
     position: relative;
+
+    font-family: system-ui;
 }
 
 .div-purple {
@@ -43,9 +45,16 @@ body {
 }
 
 .top-background-container {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding-top: 1rem;
+    gap: .5rem;
+
     background: rgb(125, 80, 209);
     background: linear-gradient(90deg, rgb(125, 79, 211) 15%, rgba(179, 31, 227, 1) 70%);
-    height: 5rem;
+
+    height: 4rem;
     width: 100%;
 
     border-top-right-radius: 2.5rem;
@@ -53,4 +62,56 @@ body {
 
     border-bottom-right-radius: .5rem;
     border-bottom-left-radius: .5rem;
+
+
+}
+
+.div-icon-profilepic {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+.img-arrow {
+    width: .8rem;
+    height: .9rem;
+    margin-left: 1rem;
+}
+
+.img-profile {
+    width: 1.7rem;
+    border-radius: 2rem;
+    vertical-align: middle;
+    border: 2px solid rgb(236, 236, 236);
+}
+
+.div-profileName-status {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    
+
+}
+
+.p-profileName {
+    font-size: .8em;
+    margin: 0;
+    color: white;
+    font-weight: 600;
+}
+
+.p-profileStatus {
+    margin: 0;
+    font-size: .6em;
+    color: rgb(222, 206, 226);
+    font-weight: 600;
+
+}
+
+.img-dotsMenu{
+    vertical-align: middle;
+    height: .8rem;
+    width: .8rem;
+    margin-left: 4.2rem;
 }
