--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .container-mobile {
     height: 33rem;
     width: 16rem;
-    background-color: hsl(270, 20%, 96%);
+    background-color: hsl(260, 8%, 93%);
     position: absolute;
     top: 6rem;
     left: 17rem;
@@ -32,7 +32,7 @@ body {
     border-bottom-right-radius: 2rem;
     border: 10px solid white;
 
-    box-shadow: 2px 20px 12px lightgray;
+    box-shadow: 6px 30px 15px rgb(212, 212, 212);
 }
 
 .notch {
@@ -56,7 +56,7 @@ body {
     gap: .5rem;
 
     background: rgb(125, 80, 209);
-    background: linear-gradient(90deg, rgb(125, 79, 211) 15%, rgba(179, 31, 227, 1) 70%);
+    background: linear-gradient(90deg, rgb(125, 79, 211) 25%, rgba(179, 31, 227, 1) 85%);
 
     height: 4rem;
     width: 100%;
@@ -117,7 +117,8 @@ body {
     vertical-align: middle;
     height: .8rem;
     width: .8rem;
-    margin-left: 4.2rem;
+    margin-left: 3.8rem;
+    
 }
 
 .section-chat-container {
@@ -125,7 +126,7 @@ body {
 }
 
 .div-chat-left {
-    background-color: hsl(289, 28%, 92%);
+    background-color: hsl(285, 19%, 88%);
     width: 10rem;
     border-radius: .7rem;
 }
@@ -150,7 +151,7 @@ body {
 }
 
 .div-chat-four {
-    margin-left: 4.6rem;
+    margin-left: 4.7rem;
     display: flex;
     justify-content: end;
     background-color: white;
@@ -215,6 +216,8 @@ body {
 
 .div-input-text{
     margin-top: 15px;
+    display: flex;
+    align-items: center;
     
 }
 input {
@@ -227,7 +230,80 @@ input {
 }
 
 input::placeholder {
-    font-size: .7em;
+    font-size: .8em;
     font-family: Rubik;
     color: rgb(199, 199, 199);
+}
+
+.black-circle {
+    background-color: hsl(271, 36%, 24%);
+    width: 1.6rem;
+    height: 1.6rem;
+    margin-left: -2rem;
+    border-radius: 2rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2px;
+}
+
+.img-arrow-input {
+    height: .7rem;
+    width: .7rem;
+    rotate: 180deg;
+    vertical-align: middle;
+    
+}
+
+.container-main {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    
+}
+
+article{
+    display: flex;
+    flex-direction: column;
+    width: 47ch;
+    line-height: 1.5rem;
+    gap: 1.7rem;
+    z-index: 1;
+
+}
+h1{
+    font-size: 2.8em;
+    color: hsl(271, 36%, 24%);
+    margin: 0;
+    font-weight: 500;
+}
+
+.p-article{
+    color: hsl(270, 7%, 64%);
+    margin: 0;
+    font-size: 1.2em;
+}
+.right-section{
+    flex: 1.5;
+}
+
+.left-section{
+    flex: 1;
+}
+
+.div-purple-right{
+    background: hsla(276, 100%, 81%, 0.01);
+    background: linear-gradient(0deg, hsla(264, 100%, 61%, 0.003) 03%, hsla(293, 100%, 63%, 0.03) 100%);
+    height: 43rem;
+    width: 30rem;
+    border-top-left-radius: 40rem;
+    border-top-right-radius: 40rem;
+    margin-right: -9rem;
+    position: fixed;
+    
+    right: 0;
+    bottom:0;
+
+    z-index: 0;
 }
